# catir

./: README.md  catir.py  pyproject.toml  setup.py
docs/superpowers/specs/: 2026-06-22-pip-pipx-installable-design.md
